src/objects/keijiban__c.object
<CustomObject>
    <fields>
        <fullName>cmnt_cnt__c</fullName>
        <label>コメント数</label>
        <summaryForeignKey>comment__c.keijiban__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>content__c</fullName>
        <label>内容</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kadai__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>関連課題</label>
        <referenceTo>kadaimng__c</referenceTo>
        <relationshipLabel>掲示板</relationshipLabel>
        <relationshipName>keijibanHOyH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kbn__c</fullName>
        <label>区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>質問</fullName>
                </value>
                <value>
                    <fullName>連絡</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>掲示板</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>GroupMail_keijiban</fullName>
        <filterScope>Queue</filterScope>
        <label>メールテスト</label>
        <queue>GroupMail</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>タイトル</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>